# tsp-solver

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
scripts/: lint.py
tsp_solver/: aco_algorithm.py  base_algorithm.py  exact_algorithm.py  ga_algorithm.py  gui.py  main.py  models.py  sa_algorithm.py
tsp_solver/algorithms/: aco.py  base.py  exact.py  ga.py  sa.py
tsp_solver/ui/: controls.py  main.py  plot_area.py  theme.py
tsp_solver/utils/: events.py  threading_utils.py
