[tool.poetry]
name = "tsp-solver"
version = "0.1.0"
description = ""
authors = ["mvishiu11 <jakubmuszynski2103@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
matplotlib = "^3.10.1"
numpy = "^2.2.3"
networkx = "^3.4.2"
ttkbootstrap = "^1.13.8"

[tool.poetry.scripts]
example = "tsp_solver.main:main"
gui = "tsp_solver.ui.main:main"
lint = "scripts.lint:main"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.1.2"
ruff = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
